--- a/koha-tmpl/intranet-tmpl/prog/fr/serials/subscription-add.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/serials/subscription-add.tmpl
@@ -20,7 +20,7 @@
     function _(s) { return s } // dummy function for gettext
 
 // the english words used in display purposes
-var text = new Array(_('Numéro'),_('Volume'),_('Prêt'),_('Mois'),_('Semaine'),_('Commence par : '),_('Retour à : '),_('Choisir l'hémisphère : '),_('Nord'),_('Sud'),
+var text = new Array(_('Numéro'),_('Volume'),_('Prêt'),_('Mois'),_('Semaine'),_('Commence par : '),_('Retour à : '),_('Choisir hémisphère : '),_('Nord'),_('Sud'),
 _('Automne'),_('Hiver'),_('Printemps'),_('Été'),_('Automne'),_('Saison'),_('Année'));
 var is_season = 0;
 var is_hemisphere = 1;
@@ -1044,7 +1044,7 @@ function Check(f) {
             if(f.numbering_pattern.value == ''){
                 alert(_("Vous devez choisir une formule de numérotation"));
             } else {
-                alert(_("Vous devez vérifier les irrégularités en cliquant sur "Irrégularités?""));
+                alert(_("Vous devez vérifier les irrégularités en cliquant sur 'Irrégularités?'"));
             }
         }
     } else {
