--- a/koha-tmpl/opac-tmpl/prog/fr/includes/opac.css
+++ b/koha-tmpl/opac-tmpl/prog/fr/includes/opac.css
@@ -146,10 +146,14 @@ tr.highlight td, tr.highlight th {
 #advsearch-itemtype table {
     border-collapse: separate;
     border-spacing: 3px;
+    border : 0px;
+    margin : 0px;
 }
 #advsearch-itemtype table tr td {
     background-color:#CCCCCC;
-    width:100%;
+    border : 0px;
+    margin : 0px;
+    width:700px;
 }
 #advsearch-itemtype table tr td p {
     font-size:0.8em;
@@ -348,11 +352,12 @@ color:#384b73;
 }
 
 .available {
-    background-color: white;
+    font-size:0.75em;
 }
 
 .unavailable {
     background-color: #FFED3D;
+    font-size:0.75em;
 }
 
 /* style for search terms in catalogsearch */
