--- a/koha-tmpl/opac-tmpl/prog/fr/opac-advsearch.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/fr/opac-advsearch.tmpl
@@ -79,8 +79,8 @@
             <option value="ti" <!-- TMPL_IF NAME="selected" -->selected="<!-- TMPL_VAR NAME="selected" -->"<!-- /TMPL_IF -->>Titre</option>
             <!-- TMPL_IF NAME="expanded_options" -->
                 <option value="ti,phr" <!-- TMPL_IF NAME="selected" -->selected="<!-- TMPL_VAR NAME="selected" -->"<!-- /TMPL_IF -->>&nbsp;&nbsp;&nbsp;&nbsp;Expression Titre</option>
-                <option value="se" <!-- TMPL_IF NAME="selected" -->selected="<!-- TMPL_VAR NAME="selected" -->"<!-- /TMPL_IF -->>&nbsp;&nbsp;&nbsp;&nbsp;Titre de collection</option>
             <!-- /TMPL_IF -->
+                <option value="se" <!-- TMPL_IF NAME="selected" -->selected="<!-- TMPL_VAR NAME="selected" -->"<!-- /TMPL_IF -->>Titre de collections</option>
         </select>
         <input type="text" size="30" name="q" title="Saisissez les termes de la recherche" value="">
         <!-- TMPL_IF NAME="expanded_options" -->
@@ -90,17 +90,19 @@
     <!-- /TMPL_LOOP -->
     </fieldset>
 <!-- /BOOLEAN SEARCH OPTIONS -->
-<div id="advsearch-itemtype">
-<fieldset>
-<legend>Types de document : sélectionner les critères suivants </legend>
-    <table><tr>
-    <!--TMPL_LOOP Name="itemtypeloop"-->
-    <td><p><input type="checkbox" id="mt-<!--TMPL_VAR Name="number" -->" name="limit" value="mt:<!--TMPL_VAR Name="code" -->"/><img border="0" src="<!--TMPL_VAR Name="imageurl" -->" /> <!--TMPL_VAR Name="description" --></p></td>
-    <!-- TMPL_UNLESS name="count5" --></tr><tr><!-- /TMPL_UNLESS -->
-    <!--/TMPL_LOOP-->
+    <div id="advsearch-itemtype">
+    <h2>Itemtype limit to any of the following:</h2>
+    <table>
+        <tr>
+      <!--TMPL_LOOP Name="itemtypeloop"-->
+        <td><p>
+        <!-- TMPL_IF name="imageurl"--><img border="0" src="<!--TMPL_VAR Name="imageurl" -->" alt="<!--TMPL_VAR Name="description" -->" /><!-- /TMPL_IF --><input type="checkbox" id="mt-<!--TMPL_VAR Name="number" -->" name="limit" value="mt:<!--TMPL_VAR Name="code" -->"/>&nbsp;
+        <!--TMPL_VAR Name="description" --></p></td>
+        <!-- TMPL_UNLESS name="count5" --></tr><tr><!-- /TMPL_UNLESS -->
+      <!--/TMPL_LOOP-->
+      </tr>
     </table>
-    </fieldset>
-</div>
+    </div>
 <!-- TMPL_IF NAME="expanded_options" -->
     <!-- BASIC LIMITS -->
     <!--TMPL_IF Name="usmarc"-->
