fixing template & javascript bug on almost all plugins

--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_115b.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_115b.tmpl
@@ -7,7 +7,7 @@
 <title>UNIMARC_Field 115b builder</title>
 </head>
 <body>
-<form name="f_pop" onSubmit="javascript:report()">
+<form name="f_pop">
 <table>
 	<tr>
 		<td>Copie (generation)</td>
@@ -670,7 +670,7 @@
                 <td>mois <input type="text" name="f11" maxlength=2 size=3 value="<!-- TMPL_VAR name="f11" -->"></td>
         </tr>
 	
-	<tr><td colspan=2><input type="submit" value="OK"></td></tr>
+	<tr><td colspan=2><input type="button" value="OK"  onClick="javascript:report()"></td></tr>
 </table>
 </form>
 <script>
