--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_127.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_127.tmpl
@@ -7,7 +7,7 @@
 <title>UNIMARC_constructeur champ 127</title>
 </head>
 <body>
-<form name="f_pop" onSubmit="javascript:report()">
+<form name="f_pop">
 <table>
 <tr>(Completer avec des 0 a gauche)</tr>
 <tr>          <td>Heure:</td>
@@ -25,7 +25,7 @@
 </tr>
 
 
-	<tr><td colspan=2><input type="submit" value="OK"></td></tr>
+	<tr><td colspan=2><input type="button" value="OK"  onClick="javascript:report()"></td></tr>
 </table>
 </form>
 <script>
