--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_135a.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_135a.tmpl
@@ -7,7 +7,7 @@
 <title>UNIMARC_constructeur champ 135a</title>
 </head>
 <body>
-<form name="f_pop" onSubmit="javascript:report()">
+<form name="f_pop">
 <table>
 	<tr>
 		<td>Type de fichier informatique:</td>
@@ -54,7 +54,7 @@
 				<option value="z">Autre</option>
 			<!-- /TMPL_IF -->
 		</td></tr>
-	<tr><td colspan=2><input type="submit" value="OK"></td></tr>
+	<tr><td colspan=2><input type="button" value="OK"  onClick="javascript:report()"></td></tr>
 </table>
 </form>
 <script>
