--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/marc21_leader.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/marc21_leader.tmpl
@@ -7,7 +7,7 @@
 <title>Leader_builder</title>
 </head>
 <body>
-<form name="f_pop" onSubmit="javascript:report()">
+<form name="f_pop">
 <table>
 	<tr>
 		<td>1-4 Record size</td>
@@ -307,7 +307,7 @@
 		<td>(auto-filled)</td>
 	<tr>
 
-	<tr><td colspan=2><input type="submit" value="OK"></td></tr>
+	<tr><td colspan=2><input type="button" value="OK"  onClick="javascript:report()"></td></tr>
 </table>
 </form>
 <script>
