--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_100.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_100.tmpl
@@ -7,7 +7,7 @@
 <title>UNIMARC_Field 100 builder</title>
 </head>
 <body>
-<form name="f_pop" onSubmit="javascript:report()">
+<form name="f_pop">
 <table>
     <tr>
         <td>Date d'enregistrement</td>
@@ -688,7 +688,7 @@
         
     </tr>
     
-    <tr><td colspan=2><input type="submit" value="OK"></td></tr>
+    <tr><td colspan=2><input type="button" value="OK"  onClick="javascript:report()"></td></tr>
 </table>
 </form>
 <script type="text/javascript" language="javascript">
