--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_110.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_110.tmpl
@@ -7,7 +7,7 @@
 <title>UNIMARC_Field 106 builder</title>
 </head>
 <body>
-<form name="f_pop" onSubmit="javascript:report()">
+<form name="f_pop">
 <table>
 	<tr>
 		<td>Type de publication en serie</td>
@@ -659,7 +659,7 @@ x
 
 
 	
-	<tr><td colspan=2><input type="submit" value="OK"></td></tr>
+	<tr><td colspan=2><input type="button" value="OK"  onClick="javascript:report()"></td></tr>
 </table>
 </form>
 <script>
