--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_115a.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_115a.tmpl
@@ -7,7 +7,7 @@
 <title>UNIMARC_Field 115a builder</title>
 </head>
 <body>
-<form name="f_pop" onSubmit="javascript:report()">
+<form name="f_pop">
 <table>
 	<tr>
 		<td>Type de document</td>
@@ -1306,7 +1306,7 @@
 		</td>
 </tr>	
 	
-	<tr><td colspan=2><input type="submit" value="OK"></td></tr>
+	<tr><td colspan=2><input type="button" value="OK"  onClick="javascript:report()"></td></tr>
 </table>
 </form>
 <script>
