--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_121b.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_121b.tmpl
@@ -7,7 +7,7 @@
 <title>UNIMARC_constructeur champ 121b</title>
 </head>
 <body>
-<form name="f_pop" onSubmit="javascript:report()">
+<form name="f_pop">
 <table>
 	<tr>
 		<td>Altitude du capteur:</td>
@@ -273,7 +273,7 @@
 		</td>
 	</tr>
 
-	<tr><td colspan=2><input type="submit" value="OK"></td></tr>
+	<tr><td colspan=2><input type="button" value="OK"  onClick="javascript:report()"></td></tr>
 </table>
 </form>
 <script>
