--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_123f.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_123f.tmpl
@@ -7,7 +7,7 @@
 <title>UNIMARC_constructeur champ 123f</title>
 </head>
 <body>
-<form name="f_pop" onSubmit="javascript:report()">
+<form name="f_pop">
 <table>
 	<tr>
 		<td>Hemisphere:</td>
@@ -56,9 +56,7 @@
                          size=3
                    value="<!-- TMPL_VAR name="f4" -->"></td>
 </tr>
-
-
-	<tr><td colspan=2><input type="submit" value="OK"></td></tr>
+	<tr><td colspan=2><input type="button" value="OK"  onClick="javascript:report()"></td></tr>
 </table>
 </form>
 <script>
