--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_leader.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_leader.tmpl
@@ -1,31 +1,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<html>
+<head>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Construction_du leader</title>
 </head>
 <body>
-<form name="f_pop" onSubmit="javascript:report()">
+<form name="f_pop">
 <table>
 	<tr>
 		<td>1-4 Taille</td>
-		<td>(auto-calculé)</td>
+		<td>(auto-calculÃ©)</td>
 	</tr>
 	<tr>
 		<td>5- Etat de la notice</td>
 		<td>
 			<select name="f5" size="1">
 			<!-- TMPL_IF name="f5c" -->
-				<option value="c" SELECTED>c- Notice corrigée</option>
+				<option value="c" SELECTED>c- Notice corrigÃ©e</option>
 			<!-- TMPL_ELSE -->
-				<option value="c">c- Notice corrigée</option>
+				<option value="c">c- Notice corrigÃ©e</option>
 			<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="f5d" -->
-				<option value="d" SELECTED>d- Notice détruite</option>
+				<option value="d" SELECTED>d- Notice dÃ©truite</option>
 			<!-- TMPL_ELSE -->
-				<option value="d">d- Notice détruite</option>
+				<option value="d">d- Notice dÃ©truite</option>
 			<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="f5n" -->
 				<option value="n" SELECTED>n- Nouvelle notice</option>
@@ -38,9 +38,9 @@
 				<option value="o">o- Notice fille</option>
 			<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="f5p" -->
-				<option value="p" SELECTED>p- Notice incomplète ou pré-publi</option>
+				<option value="p" SELECTED>p- Notice incomplÃ¨te ou prÃ©-publi</option>
 			<!-- TMPL_ELSE -->
-				<option value="p">p- Notice incomplète ou pré-publi</option>
+				<option value="p">p- Notice incomplÃ¨te ou prÃ©-publi</option>
 			<!-- /TMPL_IF -->
 			</select>
 		</td>
@@ -50,9 +50,9 @@
 		<td>
 			<select name="f6" size="1">
 			<!-- TMPL_IF name="f6a" -->
-				<option value="a" SELECTED>a- Texte imprimé</option>
+				<option value="a" SELECTED>a- Texte imprimÃ©</option>
 			<!-- TMPL_ELSE -->
-				<option value="a">a- Texte imprimé</option>
+				<option value="a">a- Texte imprimÃ©</option>
 			<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="f6b" -->
 				<option value="b" SELECTED>b- Texte manuscrit</option>
@@ -60,9 +60,9 @@
 				<option value="b">b- Texte manuscrit</option>
 			<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="f6c" -->
-				<option value="c" SELECTED>c- Partition musicale imprimée</option>
+				<option value="c" SELECTED>c- Partition musicale imprimÃ©e</option>
 			<!-- TMPL_ELSE -->
-				<option value="c">c- Partition musicale imprimée</option>
+				<option value="c">c- Partition musicale imprimÃ©e</option>
 			<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="f6d" -->
 				<option value="d" SELECTED>d- Partition musicale manuscrite</option>
@@ -70,9 +70,9 @@
 				<option value="d">d- Partition musicale manuscrite</option>
 			<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="f6e" -->
-				<option value="e" SELECTED>e- doc cartographique imprimé</option>
+				<option value="e" SELECTED>e- doc cartographique imprimÃ©</option>
 			<!-- TMPL_ELSE -->
-				<option value="e">e- doc cartographique imprimé</option>
+				<option value="e">e- doc cartographique imprimÃ©</option>
 			<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="f6f" -->
 				<option value="f" SELECTED>f - doc cartographique manuscrit</option>
@@ -80,9 +80,9 @@
 				<option value="f">f - doc cartographique manuscrit</option>
 			<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="f6g" -->
-				<option value="g" SELECTED>g - doc projeté ou vidéo</option>
+				<option value="g" SELECTED>g - doc projetÃ© ou vidÃ©o</option>
 			<!-- TMPL_ELSE -->
-				<option value="g">g - doc projeté ou vidéo</option>
+				<option value="g">g - doc projetÃ© ou vidÃ©o</option>
 			<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="f6i" -->
 				<option value="i" SELECTED>i - enreg sonore non musical</option>
@@ -100,14 +100,14 @@
 				<option value="k">k - doc graphique 2 dimensions</option>
 			<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="f6m" -->
-				<option value="m" SELECTED>m - doc multimédia</option>
+				<option value="m" SELECTED>m - doc multimÃ©dia</option>
 			<!-- TMPL_ELSE -->
-				<option value="m">m - doc multimédia</option>
+				<option value="m">m - doc multimÃ©dia</option>
 			<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="f6r" -->
-				<option value="r" SELECTED>r - Objet à 3 dimension, artefact</option>
+				<option value="r" SELECTED>r - Objet Ã  3 dimension, artefact</option>
 			<!-- TMPL_ELSE -->
-				<option value="r">r - Objet à 3 dimension, artefact</option>
+				<option value="r">r - Objet Ã  3 dimension, artefact</option>
 			<!-- /TMPL_IF -->
 			</select>
 		</td>
@@ -132,32 +132,32 @@
 					<option value="m">m- Monographie</option>
 				<!-- /TMPL_IF -->
 				<!-- TMPL_IF name="f7s" -->
-					<option value="s" SELECTED>s- Publication en série</option>
+					<option value="s" SELECTED>s- Publication en sÃ©rie</option>
 				<!-- TMPL_ELSE -->
-					<option value="s">s- Publication en série</option>
+					<option value="s">s- Publication en sÃ©rie</option>
 				<!-- /TMPL_IF -->
 			</select>
 		</td>
 	</tr>
 	
 	<tr>
-		<td>8- Niveau hiérarchique</td>
+		<td>8- Niveau hiï¿½rarchique</td>
 		<td>
 			<select name="f8" size="1">
 				<!-- TMPL_IF name="f8 " -->
-					<option value=" " SELECTED>Non défini</option>
+					<option value=" " SELECTED>Non dÃ©fini</option>
 				<!-- TMPL_ELSE -->
-					<option value=" ">Non défini</option>
+					<option value=" ">Non dÃ©fini</option>
 				<!-- /TMPL_IF -->
 				<!-- TMPL_IF name="f81" -->
-					<option value="1" SELECTED>1- Pas de relation hiérarchique</option>
+					<option value="1" SELECTED>1- Pas de relation hiÃ©rarchique</option>
 				<!-- TMPL_ELSE -->
-					<option value="1">1- Pas de relation hiérarchique</option>
+					<option value="1">1- Pas de relation hiÃ©rarchique</option>
 				<!-- /TMPL_IF -->
 				<!-- TMPL_IF name="f82" -->
-					<option value="2" SELECTED>2- Notice de niveau le + élevé</option>
+					<option value="2" SELECTED>2- Notice de niveau le + Ã©levÃ©</option>
 				<!-- TMPL_ELSE -->
-					<option value="2">a- Notice de niveau le + élevé</option>
+					<option value="2">a- Notice de niveau le + Ã©levÃ©</option>
 				<!-- /TMPL_IF -->
 				<!-- TMPL_IF name="f83" -->
 					<option value="3" SELECTED>3- Notice fille</option>
@@ -176,24 +176,24 @@
 		<td>
 			<select name="f17" size="1">
 				<!-- TMPL_IF name="f17 " -->
-					<option value=" " SELECTED>Rédigée "document en mains"</option>
+					<option value=" " SELECTED>RÃ©digÃ©e "document en mains"</option>
 				<!-- TMPL_ELSE -->
-					<option value=" ">Rédigée "document en mains"</option>
+					<option value=" ">RÃ©digÃ©e "document en mains"</option>
 				<!-- /TMPL_IF -->
 				<!-- TMPL_IF name="f171" -->
-					<option value="1" SELECTED>1- Non rédigée "document en mains"</option>
+					<option value="1" SELECTED>1- Non rÃ©digÃ©e "document en mains"</option>
 				<!-- TMPL_ELSE -->
-					<option value="1">1- Non rédigée "document en mains"</option>
+					<option value="1">1- Non rÃ©digÃ©e "document en mains"</option>
 				<!-- /TMPL_IF -->
 				<!-- TMPL_IF name="f172" -->
-					<option value="2" SELECTED>2 - Rédigée sur un doc avant publi</option>
+					<option value="2" SELECTED>2 - RÃ©digÃ©e sur un doc avant publi</option>
 				<!-- TMPL_ELSE -->
-					<option value="2">2 - Rédigée sur un doc avant publi</option>
+					<option value="2">2 - RÃ©digÃ©e sur un doc avant publi</option>
 				<!-- /TMPL_IF -->
 				<!-- TMPL_IF name="f173" -->
-					<option value="3" SELECTED>3- Notice incomplète</option>
+					<option value="3" SELECTED>3- Notice incomplÃ¨te</option>
 				<!-- TMPL_ELSE -->
-					<option value="3">3- Notice incomplète</option>
+					<option value="3">3- Notice incomplÃ¨te</option>
 				<!-- /TMPL_IF -->
 			</select>
 		</td>
@@ -227,7 +227,7 @@
 		<td>(auto-filled)</td>
 	<tr>
 
-	<tr><td colspan=2><input type="submit" value="OK"></td></tr>
+	<tr><td colspan=2><input type="button" value="OK"  onClick="javascript:report()"></td></tr>
 </table>
 </form>
 <script>
