--- a/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-renew.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-renew.tmpl
@@ -1,4 +1,9 @@
-<!-- TMPL_INCLUDE NAME="popup-top.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
+<title>Koha &rsaquo; Serials Subscription renew#<!-- TMPL_VAR name="subscriptionid" --></title>
+<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!--TMPL_INCLUDE NAME="menu-serials.inc" -->
 <div id="mainbloc">
 
 <h1 class="serial">subscription renewal for <!-- TMPL_VAR name="bibliotitle" --></h1>
